Fixed spacing between segments

--- a/style.css
+++ b/style.css
@@ -96,14 +96,14 @@
     background-color: white;
     width: 100vw;
     height: auto;
-    transform: translate(-.29cm, -.73cm);
+    transform: translate(-.33cm, -.73cm);
     flex-direction: row;
     align-content: center;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 20px;
-    border: 4px solid black;
+    border: 6px solid black;
 }
 
 #about {
@@ -127,4 +127,17 @@
     height: auto;
     border-radius: 20px;
     border: 5px solid black;
+}
+
+.buffer2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    position: relative;
+    width: 100vw;
+    height: 35vh;
+    background-color: #471c77;
+    transform: translate(-.29cm, -.85cm);
+    border: 4px solid black;
 }
